--- a/Clean_data.ipynb
+++ b/Clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "['มหาวิทยาลัย', 'ชื่อหลักสูตร', 'ประเภทหลักสูตร', 'วิทยาเขต', 'ค่าใช้จ่าย']"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        " 'ค่าใช้จ่ายต่อเทอม']"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "f6522467-18d9-4e4f-865f-8c6b37c60435",
+       "ref": "572e8b82-f0b0-4c65-ba22-cf4ecb9fd3bf",
        "rows": [
         [
          "0",
@@ -772,7 +772,7 @@
        "[64 rows x 6 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "e64c7527-c6d5-4a82-9b03-fd3b89137e78",
+       "ref": "a8d60bd4-58b7-4a55-9fd0-630243542661",
        "rows": [
         [
          "0",
@@ -1069,15 +1069,6 @@
          "หาดใหญ่",
          "อัตราค่าเล่าเรียน 18,000.-/ภาคการศึกษา",
          "18000"
-        ],
-        [
-         "21",
-         "มหาวิทยาลัยสงขลานครินทร์",
-         "วศ.บ. วิศวกรรมปัญญาประดิษฐ์",
-         "ภาษาไทย ปกติ",
-         "หาดใหญ่",
-         "อัตราค่าเล่าเรียน 28,000.-/ภาคการศึกษา",
-         "28000"
         ],
         [
          "22",
@@ -1330,11 +1321,20 @@
          "พระนครเหนือ",
          "15000",
          "15000"
+        ],
+        [
+         "50",
+         "มหาวิทยาลัยเทคโนโลยีราชมงคลรัตนโกสินทร์",
+         "วศ.บ.  วิศวกรรมคอมพิวเตอร์ 4 ปี",
+         "ภาษาไทย ปกติ",
+         "ศาลายา",
+         "สายวิทยาศาสตร์ค่าเทอมเหมาจ่าย 15,000/ภาคการศึกษา สายสังคมค่าเทอมเหมาจ่าย 12,000/ภาคการศึกษา",
+         "15000"
         ]
        ],
        "shape": {
         "columns": 6,
-        "rows": 64
+        "rows": 61
        }
       },
       "text/html": [
@@ -1420,6 +1420,15 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>มหาวิทยาลัยเทคโนโลยีมหานคร</td>\n",
+       "      <td>วศ.บ. วิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</td>\n",
+       "      <td>ภาษาไทย ปกติ</td>\n",
+       "      <td>วิทยาเขตหลัก</td>\n",
+       "      <td>_</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>59</th>\n",
        "      <td>มหาวิทยาลัยรังสิต</td>\n",
        "      <td>วศ.บ.วิศวกรรมคอมพิวเตอร์</td>\n",
@@ -1455,18 +1464,9 @@
        "      <td>ประมาณการอัตราค่าเล่าเรียน ตลอดหลักสูตร 303,50...</td>\n",
        "      <td>37937</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>สถาบันการจัดการปัญญาภิวัฒน์</td>\n",
-       "      <td>หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอ...</td>\n",
-       "      <td>ภาษาไทย ปกติ</td>\n",
-       "      <td>แจ้งวัฒนะ นนทบุรี</td>\n",
-       "      <td>อัตราค่าเล่าเรียน 384,000 บาท ตลอดหลักสูตร (มี...</td>\n",
-       "      <td>48000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>64 rows × 6 columns</p>\n",
+       "<p>61 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1477,11 +1477,11 @@
        "3   สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง   \n",
        "4                           มหาวิทยาลัยอุบลราชธานี   \n",
        "..                                             ...   \n",
+       "58                      มหาวิทยาลัยเทคโนโลยีมหานคร   \n",
        "59                               มหาวิทยาลัยรังสิต   \n",
        "60                       มหาวิทยาลัยธุรกิจบัณฑิตย์   \n",
        "61                           มหาวิทยาลัยเกษมบัณฑิต   \n",
        "62                                 มหาวิทยาลัยสยาม   \n",
-       "63                     สถาบันการจัดการปัญญาภิวัฒน์   \n",
        "\n",
        "                                         ชื่อหลักสูตร  \\\n",
        "0                         วศ.บ. วิศวกรรมปัญญาประดิษฐ์   \n",
@@ -1490,24 +1490,24 @@
        "3   วศ.บ. วิศวกรรมปัญญาประดิษฐ์และการเป็นผู้ประกอบ...   \n",
        "4     วศ.บ.สาขาวิชาวิศวกรรมปัญญาประดิษฐ์และการสั่งการ   \n",
        "..                                                ...   \n",
+       "58          วศ.บ. วิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์   \n",
        "59                           วศ.บ.วิศวกรรมคอมพิวเตอร์   \n",
        "60  หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอ...   \n",
        "61                           วศ.บ.วิศวกรรมคอมพิวเตอร์   \n",
        "62                  วศ.บ. สาขาวิชาวิศวกรรมคอมพิวเตอร์   \n",
-       "63  หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอ...   \n",
        "\n",
-       "             ประเภทหลักสูตร           วิทยาเขต  \\\n",
-       "0              ภาษาไทย ปกติ            หาดใหญ่   \n",
-       "1              ภาษาไทย ปกติ             ภูเก็ต   \n",
-       "2              ภาษาไทย ปกติ              บางมด   \n",
-       "3   Joint Degree - นานาชาติ          ลาดกระบัง   \n",
-       "4              ภาษาไทย ปกติ       วิทยาเขตหลัก   \n",
-       "..                      ...                ...   \n",
-       "59             ภาษาไทย ปกติ       วิทยาเขตหลัก   \n",
-       "60             ภาษาไทย ปกติ       วิทยาเขตหลัก   \n",
-       "61             ภาษาไทย ปกติ   วิทยาเขตร่มเกล้า   \n",
-       "62             ภาษาไทย ปกติ       วิทยาเขตหลัก   \n",
-       "63             ภาษาไทย ปกติ  แจ้งวัฒนะ นนทบุรี   \n",
+       "             ประเภทหลักสูตร          วิทยาเขต  \\\n",
+       "0              ภาษาไทย ปกติ           หาดใหญ่   \n",
+       "1              ภาษาไทย ปกติ            ภูเก็ต   \n",
+       "2              ภาษาไทย ปกติ             บางมด   \n",
+       "3   Joint Degree - นานาชาติ         ลาดกระบัง   \n",
+       "4              ภาษาไทย ปกติ      วิทยาเขตหลัก   \n",
+       "..                      ...               ...   \n",
+       "58             ภาษาไทย ปกติ      วิทยาเขตหลัก   \n",
+       "59             ภาษาไทย ปกติ      วิทยาเขตหลัก   \n",
+       "60             ภาษาไทย ปกติ      วิทยาเขตหลัก   \n",
+       "61             ภาษาไทย ปกติ  วิทยาเขตร่มเกล้า   \n",
+       "62             ภาษาไทย ปกติ      วิทยาเขตหลัก   \n",
        "\n",
        "                                           ค่าใช้จ่าย ค่าใช้จ่ายต่อเทอม  \n",
        "0              อัตราค่าเล่าเรียน 28,000.-/ภาคการศึกษา             28000  \n",
@@ -1516,16 +1516,16 @@
        "3                              175,000 ต่อภาคการศึกษา            175000  \n",
        "4   อัตราค่าเล่าเรียน  28,000 ต่อภาคการศึกษา หรือ ...             28000  \n",
        "..                                                ...               ...  \n",
+       "58                                                  _                    \n",
        "59                   ค่าเล่าเรียนตลอดหลักสูตร 396,800             49600  \n",
        "60                ค่าเล่าเรียนตลอดหลักสูตร 337000 บาท             42125  \n",
        "61                           282,000 บาท ตลอดหลักสูตร             35250  \n",
        "62  ประมาณการอัตราค่าเล่าเรียน ตลอดหลักสูตร 303,50...             37937  \n",
-       "63  อัตราค่าเล่าเรียน 384,000 บาท ตลอดหลักสูตร (มี...             48000  \n",
        "\n",
-       "[64 rows x 6 columns]"
+       "[61 rows x 6 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,25 +1581,42 @@
     "    clean_fee(val, course_type)\n",
     "    for val, course_type in zip(df_trimmed[\"ค่าใช้จ่ายต่อเทอม\"], df_trimmed[\"ประเภทหลักสูตร\"])\n",
     "]\n",
+    "df_trimmed = df_trimmed.drop_duplicates(keep='first')\n",
     "df_trimmed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\andys\\AppData\\Local\\Temp\\ipykernel_16668\\2318022961.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_trimmed[\"ค่าใช้จ่ายต่อเทอม\"] = pd.to_numeric(df_trimmed[\"ค่าใช้จ่ายต่อเทอม\"], errors='coerce')\n",
       "C:\\Users\\andys\\AppData\\Local\\Temp\\ipykernel_16668\\2318022961.py:8: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
       "\n",
       "\n",
-      "  df_trimmed[\"ค่าใช้จ่ายต่อเทอม\"].fillna(mean_value, inplace=True)\n"
+      "  df_trimmed[\"ค่าใช้จ่ายต่อเทอม\"].fillna(mean_value, inplace=True)\n",
+      "C:\\Users\\andys\\AppData\\Local\\Temp\\ipykernel_16668\\2318022961.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_trimmed[\"ค่าใช้จ่ายต่อเทอม\"].fillna(mean_value, inplace=True)\n",
+      "C:\\Users\\andys\\AppData\\Local\\Temp\\ipykernel_16668\\2318022961.py:11: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_trimmed.drop(columns=[\"ค่าใช้จ่าย\"], inplace=True)\n"
      ]
     },
     {
@@ -1637,7 +1654,7 @@
          "type": "float"
         }
        ],
-       "ref": "a88cc146-9ed0-4219-aa51-e6c0c7c518c3",
+       "ref": "50033d12-f542-45a8-aa07-e377063e034b",
        "rows": [
         [
          "0",
@@ -1661,7 +1678,7 @@
          "หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมระบบอัจฉริยะ ปริญญาตรี 4 ปี (พื้นที่การศึกษาราชบุรี)",
          "ภาษาไทย ปกติ",
          "บางมด",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "3",
@@ -1717,7 +1734,7 @@
          "วศ.บ. สาขาวิชาวิศวกรรมคอมพิวเตอร์",
          "ภาษาไทย ปกติ",
          "บางเขน",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "10",
@@ -1741,7 +1758,7 @@
          "วศ.บ. สาขาวิชาวิศวกรรมคอมพิวเตอร์",
          "ภาษาไทย ปกติ",
          "เฉลิมพระเกียรติ จ.สกลนคร",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "13",
@@ -1808,14 +1825,6 @@
          "18000.0"
         ],
         [
-         "21",
-         "มหาวิทยาลัยสงขลานครินทร์",
-         "วศ.บ. วิศวกรรมปัญญาประดิษฐ์",
-         "ภาษาไทย ปกติ",
-         "หาดใหญ่",
-         "28000.0"
-        ],
-        [
          "22",
          "มหาวิทยาลัยสงขลานครินทร์",
          "วศ.บ. วิศวกรรมดิจิทัล (หลักสูตรนานาชาติ)",
@@ -1829,7 +1838,7 @@
          "วิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอมพิวเตอร์ ปริญญาตรี 4 ปี  (หลักสูตรนานาชาติ)",
          "นานาชาติ",
          "บางมด",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "24",
@@ -1837,7 +1846,7 @@
          "วิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอมพิวเตอร์ ปริญญาตรี 4 ปี",
          "ภาษาไทย ปกติ",
          "บางมด",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "25",
@@ -1845,7 +1854,7 @@
          "ครุศาสตร์อุตสาหกรรมบัณฑิต สาขาวิชาวิศวกรรมไฟฟ้า ปริญญาตรี 5 ปี",
          "ภาษาไทย ปกติ",
          "บางมด",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "26",
@@ -1893,7 +1902,7 @@
          "กลุ่มวิศวกรรมศาสตร์ (ประกอบด้วยสาขาวิชาวิศวกรรมการผลิตอัตโนมัติและหุ่นยนต์, วิศวกรรมเกษตรและอาหาร, วิศวกรรมคอมพิวเตอร์, วิศวกรรมเคมี, วิศวกรรมเครื่องกล, วิศวกรรมปิโตรเลียมและเทคโนโลยีธรณี, วิศวกรรมไฟฟ้า, วิศวกรรมโทรคมนาคม, วิศวกรรมยานยนต์,วิศวกรรมโยธา, วิศวกรรมขนส่งและโลจิสติส์, วิศวกรรมเซรามิก, วิศวกรรมพอลิเมอร์, วิศวกรรมโลหการ, วิศวกรรมสิ่งแวดล้อม, วิศวกรรมธรณี, วิศวกรรมอากาศยาน, วิศวกรรมอิเล็กทรอนิกส์, วิศวกรรมอุตสาหการ เรียนรวมกันปี 1 แยกสาขาปี 2)",
          "ภาษาไทย ปกติ",
          "วิทยาเขตหลัก",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "32",
@@ -1949,7 +1958,7 @@
          "หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอมพิวเตอร์",
          "ภาษาไทย ปกติ",
          "วิทยาเขตหลัก",
-         "31393.09259259259"
+         "31479.941176470587"
         ],
         [
          "39",
@@ -2038,11 +2047,19 @@
          "ภาษาไทย ปกติ",
          "พระนครเหนือ",
          "15000.0"
+        ],
+        [
+         "50",
+         "มหาวิทยาลัยเทคโนโลยีราชมงคลรัตนโกสินทร์",
+         "วศ.บ.  วิศวกรรมคอมพิวเตอร์ 4 ปี",
+         "ภาษาไทย ปกติ",
+         "ศาลายา",
+         "15000.0"
         ]
        ],
        "shape": {
         "columns": 5,
-        "rows": 64
+        "rows": 61
        }
       },
       "text/html": [
@@ -2094,7 +2111,7 @@
        "      <td>หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมระ...</td>\n",
        "      <td>ภาษาไทย ปกติ</td>\n",
        "      <td>บางมด</td>\n",
-       "      <td>31393.092593</td>\n",
+       "      <td>31479.941176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2119,6 +2136,14 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>มหาวิทยาลัยเทคโนโลยีมหานคร</td>\n",
+       "      <td>วศ.บ. วิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์</td>\n",
+       "      <td>ภาษาไทย ปกติ</td>\n",
+       "      <td>วิทยาเขตหลัก</td>\n",
+       "      <td>31479.941176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
@@ -2152,17 +2177,9 @@
        "      <td>วิทยาเขตหลัก</td>\n",
        "      <td>37937.000000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>สถาบันการจัดการปัญญาภิวัฒน์</td>\n",
-       "      <td>หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอ...</td>\n",
-       "      <td>ภาษาไทย ปกติ</td>\n",
-       "      <td>แจ้งวัฒนะ นนทบุรี</td>\n",
-       "      <td>48000.000000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>64 rows × 5 columns</p>\n",
+       "<p>61 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2173,11 +2190,11 @@
        "3   สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง   \n",
        "4                           มหาวิทยาลัยอุบลราชธานี   \n",
        "..                                             ...   \n",
+       "58                      มหาวิทยาลัยเทคโนโลยีมหานคร   \n",
        "59                               มหาวิทยาลัยรังสิต   \n",
        "60                       มหาวิทยาลัยธุรกิจบัณฑิตย์   \n",
        "61                           มหาวิทยาลัยเกษมบัณฑิต   \n",
        "62                                 มหาวิทยาลัยสยาม   \n",
-       "63                     สถาบันการจัดการปัญญาภิวัฒน์   \n",
        "\n",
        "                                         ชื่อหลักสูตร  \\\n",
        "0                         วศ.บ. วิศวกรรมปัญญาประดิษฐ์   \n",
@@ -2186,29 +2203,29 @@
        "3   วศ.บ. วิศวกรรมปัญญาประดิษฐ์และการเป็นผู้ประกอบ...   \n",
        "4     วศ.บ.สาขาวิชาวิศวกรรมปัญญาประดิษฐ์และการสั่งการ   \n",
        "..                                                ...   \n",
+       "58          วศ.บ. วิศวกรรมคอมพิวเตอร์และปัญญาประดิษฐ์   \n",
        "59                           วศ.บ.วิศวกรรมคอมพิวเตอร์   \n",
        "60  หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอ...   \n",
        "61                           วศ.บ.วิศวกรรมคอมพิวเตอร์   \n",
        "62                  วศ.บ. สาขาวิชาวิศวกรรมคอมพิวเตอร์   \n",
-       "63  หลักสูตรวิศวกรรมศาสตรบัณฑิต สาขาวิชาวิศวกรรมคอ...   \n",
        "\n",
-       "             ประเภทหลักสูตร           วิทยาเขต  ค่าใช้จ่ายต่อเทอม  \n",
-       "0              ภาษาไทย ปกติ            หาดใหญ่       28000.000000  \n",
-       "1              ภาษาไทย ปกติ             ภูเก็ต       38000.000000  \n",
-       "2              ภาษาไทย ปกติ              บางมด       31393.092593  \n",
-       "3   Joint Degree - นานาชาติ          ลาดกระบัง      175000.000000  \n",
-       "4              ภาษาไทย ปกติ       วิทยาเขตหลัก       28000.000000  \n",
-       "..                      ...                ...                ...  \n",
-       "59             ภาษาไทย ปกติ       วิทยาเขตหลัก       49600.000000  \n",
-       "60             ภาษาไทย ปกติ       วิทยาเขตหลัก       42125.000000  \n",
-       "61             ภาษาไทย ปกติ   วิทยาเขตร่มเกล้า       35250.000000  \n",
-       "62             ภาษาไทย ปกติ       วิทยาเขตหลัก       37937.000000  \n",
-       "63             ภาษาไทย ปกติ  แจ้งวัฒนะ นนทบุรี       48000.000000  \n",
+       "             ประเภทหลักสูตร          วิทยาเขต  ค่าใช้จ่ายต่อเทอม  \n",
+       "0              ภาษาไทย ปกติ           หาดใหญ่       28000.000000  \n",
+       "1              ภาษาไทย ปกติ            ภูเก็ต       38000.000000  \n",
+       "2              ภาษาไทย ปกติ             บางมด       31479.941176  \n",
+       "3   Joint Degree - นานาชาติ         ลาดกระบัง      175000.000000  \n",
+       "4              ภาษาไทย ปกติ      วิทยาเขตหลัก       28000.000000  \n",
+       "..                      ...               ...                ...  \n",
+       "58             ภาษาไทย ปกติ      วิทยาเขตหลัก       31479.941176  \n",
+       "59             ภาษาไทย ปกติ      วิทยาเขตหลัก       49600.000000  \n",
+       "60             ภาษาไทย ปกติ      วิทยาเขตหลัก       42125.000000  \n",
+       "61             ภาษาไทย ปกติ  วิทยาเขตร่มเกล้า       35250.000000  \n",
+       "62             ภาษาไทย ปกติ      วิทยาเขตหลัก       37937.000000  \n",
        "\n",
-       "[64 rows x 5 columns]"
+       "[61 rows x 5 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2231,12 +2248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_trimmed = df_trimmed.drop_duplicates(keep='first')\n",
-    "df_trimmed\n",
     "df_trimmed.to_excel(\"cleaned-data.xlsx\", index=False)\n"
    ]
   }
